AC_INIT([Byte On Panel], [0.2.0], [mozbugbox@yahoo.com.au], [byteonpanel], [https://bitbucket.org/mozbugbox/byteonpanel/])
AC_CONFIG_SRCDIR([configure.ac])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([dist-bzip2])
AM_MAINTAINER_MODE

AM_CONDITIONAL([IS_HG_REPO], [test -d "$srcdir/.hg"])

AM_PROG_VALAC([0.10.0])

AC_PROG_CC
AM_PROG_CC_C_O
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

AH_TEMPLATE([GETTEXT_PACKAGE], [Package name for gettext])
GETTEXT_PACKAGE=byteonpanel
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT
IT_PROG_INTLTOOL([0.35.0])

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

GLIB_REQUIRED=2.12.0
GTK_REQUIRED=3.0.0

CAIRO_REQUIRED=1.10.2

PKG_CHECK_MODULES(BYTEONPANEL, glib-2.0 >= $GLIB_REQUIRED gobject-2.0 >= $GLIB_REQUIRED gtk+-3.0 >= $GTK_REQUIRED cairo >= $CAIRO_REQUIRED)
AC_SUBST(BYTEONPANEL_CFLAGS)
AC_SUBST(BYTEONPANEL_LIBS)

AC_CONFIG_FILES([Makefile
	src/Makefile
    vapi/Makefile
	po/Makefile.in])

AC_OUTPUT
